helm/kafka/service-NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: kafka
  ports:
    - protocol: TCP
      port: 9092
      targetPort: 9092
      nodePort: 32008
